Print square of even element in the list using map and filter.